--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
       MONGODB_CLUSTER_ADDRESS: cluster0.zotmmmu.mongodb.net
       MONGODB_PASSWORD: 0IUkYFedgtqpXWpQ
       PORT: 8080
-    environment: testing
+    # environment: testing
     runs-on: ubuntu-latest
     steps:
       - name: Get Code
