--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,9 +10,12 @@ env:
 jobs:
   test:
     env:
-      MONGODB_CLUSTER_ADDRESS: cluster0.zotmmmu.mongodb.net
-      MONGODB_USERNAME: ramu
-      MONGODB_PASSWORD: 0IUkYFedgtqpXWpQ
+      # MONGODB_CLUSTER_ADDRESS: cluster0.zotmmmu.mongodb.net
+      # MONGODB_USERNAME: ramu
+      # MONGODB_PASSWORD: 0IUkYFedgtqpXWpQ
+      MONGODB_CLUSTER_ADDRESS: ${{ secrets.MONGODB_CLUSTER_ADDRESS }}
+      MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME }}
+      MONGODB_PASSWORD: ${{ secrets.MONGODB_PASSWORD }}
       PORT: 8080
     environment: testing
     runs-on: ubuntu-latest
