--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,49 +1,42 @@
 name: Deployment
 on:
   push:
-    branches:
-      - main
-      - dev
-      - master
+    branches: [main, dev, master]
+
+# GLOBAL ENVIRONMENT: Both jobs 'test' and 'deploy' see these
 env:
   MONGODB_DB_NAME: demo-db
+  MONGODB_CLUSTER_ADDRESS: ${{ vars.MONGODB_CLUSTER_ADDRESS }}
+  MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME }}
+  MONGODB_PASSWORD: ${{ secrets.MONGODB_PASSWORD }}
+  PORT: 8080
+
 jobs:
   test:
-    env:
-      # MONGODB_CLUSTER_ADDRESS: cluster0.zotmmmu.mongodb.net
-      # MONGODB_USERNAME: ramu
-      # MONGODB_PASSWORD: 0IUkYFedgtqpXWpQ
-      MONGODB_CLUSTER_ADDRESS: ${{ secrets.MONGODB_CLUSTER_ADDRESS }}
-      MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME }}
-      MONGODB_PASSWORD: ${{ secrets.MONGODB_PASSWORD }}
-      PORT: 8080
     environment: testing
     runs-on: ubuntu-latest
     steps:
       - name: Get Code
         uses: actions/checkout@v3
-      - name: Cache dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: npm-deps-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
         run: npm ci
       - name: Run server
-        run: npm start & npx wait-on http://127.0.0.1:$PORT
+        run: npm start & npx wait-on http://127.0.0.1:${env.PORT} --timeout 30000
       - name: Run tests
         run: npm test
-      - name: Output information
-        run: |
-          echo "MONGODB_USERNAME: $MONGODB_USERNAME"
-          echo "MONGODB_PASSWORD: $MONGODB_PASSWORD"
-          echo "MONGODB_DB_NAME: ${{ env.MONGODB_DB_NAME }}"
+
   deploy:
     needs: test
+    environment: testing
     runs-on: ubuntu-latest
     steps:
       - name: Output information
         run: |
-          echo "MONGODB_USERNAME: $MONGODB_USERNAME"
-          echo "MONGODB_PASSWORD: $MONGODB_PASSWORD"
-          echo "MONGODB_DB_NAME: ${{ env.MONGODB_DB_NAME }}"
+          echo "Username: $MONGODB_USERNAME"
+
+          # To actually run base64, you need the $( ) syntax
+          # This takes the password and runs the base64 command
+          echo "Base64 Password: $(echo -n $MONGODB_PASSWORD | base64)"
+
+          # This also works using the GitHub Context directly
+          echo "Direct Context Base64: $(echo -n ${{ secrets.MONGODB_PASSWORD }} | base64)"
