--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Run server
-        run: npm start & npx wait-on http://127.0.0.1:${env.PORT} --timeout 30000
+        run: npm start & npx wait-on http://127.0.0.1:$PORT --timeout 30000
       - name: Run tests
         run: npm test
 
